# editorconfig-core-js

./: .c8rc.json  .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .mocharc.js  .ncurc  .npmignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md  editorconfig.js  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tslint.json  typedoc.config.cjs
.github/workflows/: node.js.yml  publish.yml
lib/: editorconfig.js  fnmatch.js  ini.js  version.js
src/: cli.test.ts  cli.ts  index.test.ts  index.ts  iniFile.d.ts  iniFile.js  iniFile.peggy
src/lib/: ini.ts  iniFile.d.ts  iniFile.js  iniFile.peggy
test/: .editorconfig  index.js
